# rust_robotics

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  codecov.yml
.github/workflows/: code_coverage.yml  codspeed.yml  main.yml
benches/: num_methods.rs
configs/: bike_kinem_example.toml
configs/controls/: n_joint_arm2_params.toml
configs/examples/: animation.toml  animation_bicycle.toml  animation_n_joint_arm2.toml  bicycle_kinematic.toml
configs/path_planning/: dijkstra_animation.toml  dijkstras_params.toml  obstacle_map_params.toml
configs/utils/: generate_custom_map_animation.toml  generate_custom_map_params.toml
examples/: dijkstra.rs  generate_custom_map.rs  generic_planner.rs  simulation_template.rs
examples/controls/: n_joint_arm_2d.rs
examples/path_planning/: dijkstra.rs  dijkstras.rs
examples/utils/: generate_custom_map.rs
logs/: test_minifb.txt  test_minifb_plotter.txt  test_plotters.txt  test_rk.txt
logs/examples/: example_path.csv  test_csv.csv
logs/valgrind/: test_csv.txt  test_multiplotter.txt
scripts/: build_docker_image.sh  build_project.sh  docker-compose.yml  run_docker.sh  run_example.sh  valgrind_exe.sh  variables.sh
src/: lib.rs
src/controls/: mod.rs  path_tracking.rs  pid.rs  pid2.rs
src/models/: base.rs  base_d.rs  bicycle_kinematic.rs  ca_1dof.rs  ca_3dof.rs  mod.rs
src/models/generic/: ca_1dof.rs  ca_3dof.rs  mod.rs
src/models/ground_vehicles/: basic_bicycle_kinematic.rs  bicycle_kinematic.rs  longitudinal_dynamics.rs  mod.rs
src/models/humanoid/: mod.rs  n_joint_arm2.rs  n_joint_arm2_d.rs  two_joint_arm.rs
src/num_methods/: defs.rs  experimental.rs  expiremental.rs  mod.rs  runge_kutta.rs
src/path_planning/: base.rs  dijkstra.rs  dijkstras.rs  dijkstras2.rs  experimental.rs  grid_item.rs  grid_item2.rs  mod.rs
src/utils/: constant.rs  convert.rs  defs.rs  files.rs  geometry.rs  map_generator.rs  math.rs  mod.rs  plot.rs  plot2.rs  transforms.rs
