[package]
name = "rust_robotics"
version = "0.1.0"
authors = ["Samir Hassen"]
edition = "2021"

[dependencies]
approx = "0.3.2"
minifb = "0.27"
nalgebra = "0.33.0"
plotters = "0.3.6"
plotters-arrows = "0.1.0"
plotters-backend = "0.3.6"
plotters-bitmap = "0.3.6"
serde = { version = "1.0.205", features = ["derive"] }
simba = "0.9.0"
toml = "0.8.19"

# copied from https://stackoverflow.com/questions/29008127/why-are-rust-executables-so-huge
# TODO: Figure out my own needs
[profile.release]
opt-level = 'z' # Optimize for size
lto = true # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort' # Abort on panic
strip = true # Strip symbols from binary*
