[package]
name = "rust_robotics"
version = "0.1.0"
authors = ["Samir Hassen"]
edition = "2021"

[dependencies]
csv = "1.3"
minifb = "0.27"
nalgebra = "0.33"
num-traits = "0.2"
plotters = "0.3"
plotters-arrows = "0.1"
plotters-bitmap = "0.3"
rustc-hash = { version = "2.0", default-features = true }
serde = { version = "1", features = ["derive"] }
toml = "0.8.19"

# copied from https://stackoverflow.com/questions/29008127/why-are-rust-executables-so-huge
# TODO: Figure out my own needs
[profile.release]
opt-level = 'z' # Optimize for size
lto = true # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort' # Abort on panic
strip = true # Strip symbols from binary*

[dev-dependencies]
approx = "0.3.2"
codspeed-criterion-compat = "2.7.1"

[[bench]]
name = "num_methods"
harness = false
